# diffrs

./: Cargo.toml  README.md  left.json  right.json
src/: main.rs
