[package]
name = "diffrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
ratatui = "0.26.3" 
tempfile = "3.10.1"
serde = { version = "1.0.203", features = ["derive"] } # Version based on latest documentation
serde_json = "1.0.117" # Version based on latest documentation